--- a/app/src/App.css
+++ b/app/src/App.css
@@ -32,9 +32,10 @@ body {
 
 .overflow {
   overflow-y: scroll !important;
-  height: 370px !important;
+  height: 450px !important;
   padding-right: 10px !important ;
-  flex-direction: column-reverse !important;
+  /* flex-direction: column-reverse !important; */
+  align-items: baseline !important;
 }
 
 .overflow::-webkit-scrollbar {
