--- a/app/src/Components/Cards/Cards.module.css
+++ b/app/src/Components/Cards/Cards.module.css
@@ -2,11 +2,13 @@
   background: linear-gradient(to top left, #e52a5a, #ff585f) !important;
   color: white !important;
   text-transform: uppercase !important;
+  text-overflow: ellipsis !important;
 }
 
 .cards {
   box-shadow: 2px 2px 2px rgb(53, 53, 53) !important;
   transition: ease-in-out 0.5s !important;
+ 
 }
 
 .body {
